--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "standard",
-    "build": "drpc schema.proto --rpc=index.js --messages=messages.js"
+    "build": "drpc_dweb schema.proto --rpc=index.js --messages=messages.js"
   },
   "author": "PeepsLabs <peepslabs@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "drpc": "^1.0.0",
+    "drpc_dweb": "^1.0.0",
     "standard": "^14.3.4"
   },
   "dependencies": {
-    "drpc-runtime": "^1.0.0"
+    "drpc_dweb-runtime": "^1.0.0"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,7 @@
     "dhub",
     "rpc",
     "raw",
-    "drpc"
+    "drpc_dweb"
   ],
   "bugs": {
     "url": "https://github.com/dwebprotocol/dhub-rpc/issues"
